# grizzly-prototype

./: CMakeLists.txt  README.md  start.cpp
cmake/: FindLLVM.cmake  FindPAPI.cmake  Findclang.cmake  macros.cmake
data-generator/: .gitignore  dataGenerator  dataGenerator.cpp
include/api/: Aggregation.h  Assigner.h  Config.h  Field.h  Mapper.h  Predicate.h  Query.h  Schema.h  Time.h  Trigger.h  Window.h
include/code_generation/: CCode.h  CFile.h  CMethod.h  CodeGenerator.h  QueryContext.h
include/jit/: CodeCompiler.hpp  JITCodeGenerator.h  JITExecutionRuntime.h
include/jit/runtime/: JitDispatcher.h  JitRuntime.h  Profiling.h  SimpleDispatcher.h  Variant.hpp  jit_global_state.hpp  zip.hpp
include/operator/: AggregateOperator.h  FilterOperator.h  FinalWindowAggOperator.h  GenerateOperator.h  GroupByOperator.h  InputOperator.h  KeyOperator.h  MapOperator.h  Operator.h  PrintOperator.h  ReadOperator.h  ReadWindowOperator.h  SelectOperator.h  WindowOperator.h  WriteOperator.h  WriteToMemOperator.h
include/runtime/: input_types.h
src/: CMakeLists.txt
src/api/: Aggregation.cpp  Assigner.cpp  CMakeLists.txt  Config.cpp  Field.cpp  Predicate.cpp  Query.cpp  Schema.cpp  Time.cpp  Trigger.cpp
src/code_generation/: CCode.cpp  CFile.cpp  CMakeLists.txt  CMethod.cpp  CodeGenerator.cpp  QueryContext.cpp
src/jit/: CMakeLists.txt  CodeCompiler.cpp  JITCodeGenerator.cpp  JITExecutionRuntime.cpp  Profiling.cpp  Variant.cpp
src/operator/: AggregateOperator.cpp  CMakeLists.txt  FilterOperator.cpp  FinalWindowAggOperator.cpp  GenerateOperator.cpp  GroupByOperator.cpp  InputOperator.cpp  KeyOperator.cpp  MapOperator.cpp  Operator.cpp  PrintOperator.cpp  ReadOperator.cpp  ReadWindowOperator.cpp  SelectOperator.cpp  WindowOperator.cpp  WriteOperator.cpp  WriteToMemOperator.cpp
